--- a/package.json
+++ b/package.json
@@ -16,5 +16,8 @@
     "gulp-cli": "^2.3.0",
     "gulp-rename": "^2.0.0",
     "gulp-sass": "^5.1.0"
+  },
+  "dependencies": {
+    "bootstrap": "^5.3.2"
   }
 }
