--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node index.js"
   },
   "author": "helge",
   "license": "ISC",
@@ -20,4 +20,8 @@
   "dependencies": {
     "bootstrap": "^5.3.2"
   }
+
+
+
+
 }
